SigmaCodebackup3rdSep/objects/Expenditure__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expenditures</relationshipLabel>
        <relationshipName>Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Expenditure__c</fullName>
        <label>Direct Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Expenditure__c</fullName>
        <label>Inventory Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Expenditures</relationshipLabel>
        <relationshipName>Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Expenditures</relationshipLabel>
        <relationshipName>Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipLabel>Expenditures</relationshipLabel>
        <relationshipName>Expenditures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Expenditures</relationshipLabel>
        <relationshipName>Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expenditures (Reported By)</relationshipLabel>
        <relationshipName>Expenditures1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Expenditure__c</fullName>
        <label>Resource Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Expenditures</relationshipLabel>
        <relationshipName>Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Expenditures</relationshipLabel>
        <relationshipName>Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supply_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supply &amp; Service</label>
        <referenceTo>Freight_Packaging_Quotes__c</referenceTo>
        <relationshipLabel>Expenditures</relationshipLabel>
        <relationshipName>Expenditures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Travel_Expenditure__c</fullName>
        <label>Travel Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Expenditure</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>ExpenditureNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenditures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>